# MbedSys-Face-Detection

./: README.md
DB/: CMakeLists.txt
DB/include/: face_detector.h
DB/src/: Database.cpp  face_detector.cpp
Init_dB/: CMakeLists.txt
Init_dB/src/: init_dB.cpp
MQTT/Publisher/: CMakeLists.txt  Publisher.cpp
MQTT/Publisher/src/: Publisher.cpp
MQTT/Subscriber/: CMakeLists.txt
MQTT/Subscriber/src/: Subscriber.cpp
Server/: CMakeLists.txt
Server/src/: server.cpp
